[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/DialogEditor/DialogGraphEditor/Nodes/EditorValueNodes/BaseEditorValueNode.gd" type="Script" id=1]
[ext_resource path="res://addons/DialogEditor/icons/Reload.svg" type="Texture" id=2]

[node name="BaseEditorValueNode" type="GraphNode"]
margin_right = 178.0
margin_bottom = 104.0
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 162.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 1.0
margin_right = 126.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "value name"

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 130.0
margin_right = 146.0
margin_bottom = 16.0
texture_normal = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 41.0
margin_right = 162.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="close_request" from="." to="." method="_on_BaseEditorValueNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_BaseEditorValueNode_resize_request"]
[connection signal="pressed" from="HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
